--- a/_includes/modelViewer.html
+++ b/_includes/modelViewer.html
@@ -1,6 +1,6 @@
 <div class="embed-container">
     <iframe
-        src="https://kristian-dixon.github.io/Extra/JekyllPlugins/GLTFViewer/?modelname{{ include.id }}"
+        src="https://kristian-dixon.github.io/Extra/JekyllPlugins/GLTFViewer/index.html?modelname={{ include.id }}"
         width="720"
         height="480"
         frameborder="0"
