--- a/_includes/modelViewer.html
+++ b/_includes/modelViewer.html
@@ -1,8 +1,8 @@
 <div class="embed-container">
     <iframe
         src="https://kristian-dixon.github.io/Extra/JekyllPlugins/GLTFViewer/?modelname={{ include.id }}"
-        width="720"
-        height="480"
+        width="100%"
+        height="800"
         frameborder="0"
         allowfullscreen="true">
     </iframe>
