--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -1,8 +1,8 @@
-<div class="embed-container">
+<div class="youtube-embed-container">
     <iframe
         src="https://www.youtube.com/embed/{{ include.id }}"
-        width="700"
-        height="480"
+        width="100%"
+        height="400px"
         frameborder="0"
         allowfullscreen="true">
     </iframe>
