--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,28 +4,48 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{page.title}} - Kris makes stuff</title>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/portfolio.css">
   </head>
 
   <body>
-    <header class="site-header">
-      <a class="site-title" rel="author" href="/">Kris makes stuff</a>
-
-      <button class="buttonCircle buttonDark">
-        <i class="icon" data-char="?"></i>
-      </button>
-    </header>
-    
     {%- if page.engine contains "gltf-viewer" -%}
       {% assign modelpath = page.modelpath %}
       {% include modelViewer.html id=page.modelpath %}
     {%- endif -%}
 
+    <header class="site-header">
+      <a class="site-title" rel="author" href="/">Kris makes stuff</a>
+    </header>
+
     <main class="page-content" aria-label="Content">
-      <div class="content-wrapper">
-        {{ content }}
+      <button class="buttonCircle buttonDark" id="show_post_btn" onclick=
+        "
+          document.getElementById('show_post_btn').classList.add('hidden');
+          document.getElementById('hide_post_btn').classList.remove('hidden');
+          document.getElementById('content-panel').classList.remove('hidden');
+          //document.getElementById('demo').innerHTML = Date()
+        ">
+        <i class="icon" data-char="?"></i>
+      </button>
+      <button class="buttonCircle buttonDark hidden" id="hide_post_btn" onclick=
+      "
+        document.getElementById('show_post_btn').classList.remove('hidden');
+        document.getElementById('hide_post_btn').classList.add('hidden');
+        document.getElementById('content-panel').classList.add('hidden');
+        //document.getElementById('demo').innerHTML = Date()
+      ">
+        <i class="icon" data-char="X"></i>
+      </button>
+
+      <div class="content-panel hidden" id="content-panel">
+        <div class="content-wrapper">
+          {{ content }}
+        </div>
       </div>
+
     </main>
   </body>
 
