--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,8 +1,35 @@
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 0 8px 8px 0;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #8888882f; 
+    border-radius: 0 8px 8px 0;
+
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #f1f1f13a; 
+    border-radius: 0 8px 8px 0;
+
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #999999; 
+    border-radius: 0 8px 8px 0;
+
+}
+
 html *
 {
-    font-family: Lato;
+    font-family: "Roboto", sans-serif;
     
-   
+    overflow: hidden;
 
 }
 
@@ -31,32 +58,61 @@ body
     top:50%;
     transform: translate(0,-50%);
 
-    background-color: rgba(255, 255, 255, 50%);
-    max-width: 600px;
-    /* min-height: 80%; */
-    max-height: 90%;
-    overflow-y: auto;
-    backdrop-filter: grayscale(36%) brightness(150%) blur(16px);
+    height: 100vh;
+    
 
-    box-shadow: -5px 5px 5px rgba(12, 12, 12, 63%); 
 
-    border-radius: 8px 0px 0px 8px;
  
-    font-weight: 600;
-    text-shadow:
+    /* font-weight: 600; */
+    /* text-shadow:
     0.0037em 0 rgb(255, 255, 255,150),
     0 0.0037em rgb(255, 255, 255,150),
     -0.0037em 0 rgb(126, 126, 126,150),
-    0 -0.0037em rgb(39, 39, 39,150);
+    0 -0.0037em rgb(39, 39, 39,150); */
+
+    display:flex;
+    align-items: center;
+
+    pointer-events: none;
+    /* box-shadow: -5px 5px 5px rgba(12, 12, 12, 63%);  */
 }
+
+
+
+
+.content-panel{
+    /* background-color: rgba(255, 255, 255, 35%); */
+
+    background: linear-gradient(#73737375, #3333330a);
+    background-size: auto 150%;
+    background-position: 0 100%;
+
+
+
+    max-width: 600px;
+    max-height: 88vh;
+    /* min-height: 80%; */
+    overflow-y: auto;
+    backdrop-filter: grayscale(36%) brightness(50%) blur(16px);
+    
+    border-radius: 8px 0px 0px 8px;
+    box-shadow: -5px 5px 5px rgba(12, 12, 12, 63%); 
+
+    pointer-events: all;
+
+    
+}
+
 
 
 .content-wrapper
 {
     padding:0px 20px;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
+    color:#FFFFFFFF;
+    text-shadow: 0 1px 1px rgba(0,0,0, 1)
 }
 
 .site-header
@@ -86,14 +142,18 @@ body
     height: 100%;
     position:absolute;
     top:0;
+
 }
 
+.hidden
+{
+    display:none;
+    visibility: hidden;
+}
 
 button {
     position: relative;
-    font-size: 16px;
-    padding: 0 20px;
-    display: inline-block;
+    font-size: 12px;
     border:     none;
     outline:    none;
     background:   #FFF;
@@ -101,12 +161,18 @@ button {
     border: 1px solid #1F1F1F;
     box-shadow: 0 1px 3px 0px rgba(#0F0F0F, .5),
       inset 0 1px rgba(#FFF, .2); 
+
+    margin:8px;
+
+    pointer-events: all;
   }
 
 .buttonDark {
-    background: linear-gradient(#737373, #333333);
+    background: linear-gradient(#73737375, #3333330a);
     background-size: auto 150%;
     background-position: 0 100%;
+    backdrop-filter: grayscale(36%) brightness(50%) blur(16px);
+
 
     &:hover {
         background-position: 0 50%;
@@ -114,14 +180,14 @@ button {
     }
 
     &:active {
-        color: #000;
+        color: #75757523;
         background-position: 0 50%;
-        background: #333333;
-        box-shadow: inset 0 2px 3px rgba(black, .5), 0 1px 1px rgba(white, .1);
+        background: #33333344;
+        box-shadow: inset 0 2px 3px rgba(0,0,0, .5), 0 1px 1px rgba(255,255,255, .1);
         
         .icon:before {
-        color: #111;
-        text-shadow: 0 1px rgba(white, .1);
+            color: #7a7a7a;
+            text-shadow: 0 1px rgba(255,255,255, .1);
         }
     }
 }
@@ -131,11 +197,11 @@ button {
 
 .icon:before {
     font-style: normal;
-    font-size: 40px;
+    font-size: 28px;
     display: block;
-    margin-top: -5px;
+    
     color: #DDD;
-    text-shadow: 0 1px 1px rgba(black, 1);
+    text-shadow: 0 1px 1px rgba(0,0,0, 1);
     content: attr(data-char);
 }
 
@@ -151,12 +217,23 @@ button {
 
 
 @media (max-width: 1024px){
+    ::-webkit-scrollbar {
+        border-radius: 0 8px 8px 0;
+    }
+    
     .page-content
     {
         right:50%;
         top:50%;
         transform: translate(50%,-50%);
         width:90%;
+
+        flex-direction: column-reverse;
+    }
+
+    .content-panel{
         border-radius: 8px;
+
     }
 };
+
